--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body class="flex justify-center items-start min-h-screen">
-    <div class="w-full max-w-md bg-white min-h-screen relative shadow-xl">
+    <div class= "w-full max-w-md bg-white h-screen flex flex-col shadow-xl">
       <div class="flex items-center justify-between px-4 h-14 border-b">
         <button class="text-xl">
           <svg
@@ -46,7 +46,7 @@
         <h1 class="font-semibold text-lg">Saldo</h1>
         <button class="w-6"></button>
       </div>
-      <div class="p-4 space-y-4">
+      <div class="flex-1 overflow-y-auto p-4 space-y-4 pb-28">
         <input
           id="username"
           type="text"
@@ -91,29 +91,77 @@
           </div>
           <div class="coin-card" data-dollar="1.50" data-coin="500">
             <div
+            class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
+            >
+            <img
+            src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
+            class="w-5 h-5"
+            />
+            500
+          </div>
+          <div class="text-gray-500 text-sm">$1.50</div>
+        </div>
+        <div class="coin-card" data-dollar="2.10" data-coin="700">
+          <div
               class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
             >
               <img
                 src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
                 class="w-5 h-5"
               />
-              500
+              700
             </div>
-            <div class="text-gray-500 text-sm">$1.50</div>
+            <div class="text-gray-500 text-sm">$2.10</div>
           </div>
           <div class="coin-card" data-dollar="3.00" data-coin="1000">
             <div
-              class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
+            class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
             >
-              <img
-                src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
-                class="w-5 h-5"
-              />
-              1.000
-            </div>
-            <div class="text-gray-500 text-sm">$3.00</div>
+            <img
+            src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
+            class="w-5 h-5"
+            />
+            1.000
           </div>
-          <div class="coin-card" data-dollar="6.00" data-coin="2000">
+          <div class="text-gray-500 text-sm">$3.00</div>
+        </div>
+        <div class="coin-card" data-dollar="6.00" data-coin="2000">
+          <div
+          class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
+          >
+          <img
+          src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
+          class="w-5 h-5"
+          />
+          2.000
+        </div>
+        <div class="text-gray-500 text-sm">$6.00</div>
+      </div>
+      <div class="coin-card" data-dollar="12.00" data-coin="4000">
+        <div
+          class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
+        >
+          <img
+            src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
+            class="w-5 h-5"
+          />
+          4.000
+        </div>
+        <div class="text-gray-500 text-sm">$12.00</div>
+      </div>
+      <div class="coin-card" data-dollar="18.00" data-coin="6000">
+        <div
+          class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
+        >
+          <img
+            src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
+            class="w-5 h-5"
+          />
+          6.000
+        </div>
+        <div class="text-gray-500 text-sm">$18.00</div>
+      </div>
+      <div class="coin-card" data-dollar="24.00" data-coin="8000">
             <div
               class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
             >
@@ -121,11 +169,11 @@
                 src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
                 class="w-5 h-5"
               />
-              2.000
+              8.000
             </div>
-            <div class="text-gray-500 text-sm">$6.00</div>
+            <div class="text-gray-500 text-sm">$24.00</div>
           </div>
-          <div class="coin-card" data-dollar="18.00" data-coin="6000">
+          <div class="coin-card" data-dollar="30.000" data-coin="10000">
             <div
               class="flex justify-center items-center gap-1 text-xl font-bold text-gray-800"
             >
@@ -133,13 +181,13 @@
                 src="https://raw.githubusercontent.com/mnjaulhaq/asset_coin/refs/heads/main/Grey_Modern_Size_Chart_Instagram_Post_1_-removebg-preview.png"
                 class="w-5 h-5"
               />
-              6.000
+              10.000
             </div>
-            <div class="text-gray-500 text-sm">$18.00</div>
+            <div class="text-gray-500 text-sm">$30.000</div>
           </div>
         </div>
       </div>
-      <div class="absolute bottom-0 w-full p-4 bg-white space-y-3 border-t">
+      <div class="sticky bottom-0 w-full p-4 bg-white space-y-2 border-t">
         <p class="text-xs text-gray-500 leading-relaxed">
           Koin yang didapatkan melalui pertukaran ini tunduk pada
           <span class="font-medium">Kebijakan Item Virtual</span> kami.
@@ -152,7 +200,7 @@
           Kirim
         </button>
       </div>
-    </div>
+    </>
     <script>
       let saldoCoin = 100000;
       let saldoDollar = 300.0;
